--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>br.edu.ifpb.praticas</groupId>
-  <artifactId>michelle-archetype-archetype</artifactId>
+  <artifactId>michelle-archetype</artifactId>
   <version>1.0</version>
   <packaging>maven-archetype</packaging>
 
-  <name>michelle-archetype-archetype</name>
+  <name>michelle-archetype</name>
 
   <build>
     <extensions>
